[tool.poetry]
name = "few_shot_learning_classification"
version = "0.1.0"
description = "A library to do few shot classification"
authors = ["Adam Stein"]
license = "Proprietary"

packages=[{include = "few_shot_learning_classification"}]

[tool.poetry.dependencies]
python = "~3.8"
pandas = "^1.2.3"
sentence_transformers = "^1.1.0"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
